# gogoanime

./: Cargo.toml
src/: bin.rs  lib.rs
