[package]
name = "gogoanime"
version = "0.1.0"
authors = ["Nobbele <realnobbele@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.34"
futures = "0.3.7"
json = "0.12.4"
reqwest = "0.10.8"
scraper = "0.12.0"
thiserror = "1.0.22"
tokio = { version = "*", features = ["full"] }

[lib]
name = "gogoanime"
path = "src/lib.rs"

[[bin]]
name = "gogoanime-cli"
path = "src/bin.rs"
